feat(v2): add content management api
